--- a/debug dec model.ipynb
+++ b/debug dec model.ipynb
@@ -8,6 +8,7 @@
    "outputs": [],
    "source": [
     "import os\n",
+    "os.environ['CUDA_LAUNCH_BLOCKING'] = \"1\"\n",
     "\n",
     "import os.path as op\n",
     "import torch\n",
@@ -24,7 +25,8 @@
     "from model import build_model\n",
     "from utils.metrics import Evaluator\n",
     "from utils.options import get_args\n",
-    "from utils.comm import get_rank, synchronize"
+    "from utils.comm import get_rank, synchronize\n",
+    "import tqdm"
    ]
   },
   {
@@ -213,31 +215,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 9,
-   "id": "c240e0ae",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(8,\n",
-       " 0,\n",
-       " 'F:\\\\Datasets\\\\AG-ReID.v1\\\\AG-ReID\\\\bounding_box_train\\\\P0001T04041A0C0F121.jpg',\n",
-       " 'F:\\\\Datasets\\\\AG-ReID.v1\\\\AG-ReID\\\\bounding_box_train\\\\P0001T04041A0C3F10021.jpg',\n",
-       " 'The pedestrian in the image appears to be a male with long hair, wearing a dark-colored hoodie with some text on it. He is also wearing blue jeans and white shoes. He seems to be carrying a white bag or purse in his right hand.')"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_loader.dataset.dataset[0]"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "82db35fd",
    "metadata": {},
@@ -247,8 +224,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "2a5adc8b",
+   "execution_count": 9,
+   "id": "27361a2d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +234,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
+   "id": "602d96c2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "args.token_num = 16"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "id": "3cd9f999",
    "metadata": {},
    "outputs": [
@@ -276,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "ca5f0785",
    "metadata": {},
    "outputs": [],
@@ -286,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "272fb216",
    "metadata": {},
    "outputs": [
@@ -296,7 +283,7 @@
        "'Total params: 179M'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,46 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "f5f6728c",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = model.base_model.visual.conv_embedding(batch['images'].half())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "9c83a25a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([6, 192, 768])"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "x.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "8b334189",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "46146517",
    "metadata": {},
    "outputs": [],
@@ -364,9 +312,8 @@
      "data": {
       "text/plain": [
        "{'temperature': tensor(0.0200),\n",
-       " 'itc_loss': tensor(1.8573, device='cuda:0', grad_fn=<DivBackward0>),\n",
-       " 'itc_add_loss': tensor(1.9038, device='cuda:0', grad_fn=<DivBackward0>),\n",
-       " 'loss_proj': tensor(1.8672, device='cuda:0', dtype=torch.float16, grad_fn=<AddBackward0>)}"
+       " 'loss_proj': tensor(1.9277, device='cuda:0', dtype=torch.float16, grad_fn=<AddBackward0>),\n",
+       " 'itc_loss': tensor(1.6424, device='cuda:0', grad_fn=<DivBackward0>)}"
       ]
      },
      "execution_count": 14,
@@ -376,6 +323,27 @@
    ],
    "source": [
     "ret"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "1b84773d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1359/1359 [03:04<00:00,  7.36it/s]\n"
+     ]
+    }
+   ],
+   "source": [
+    "for batch in tqdm.tqdm(train_loader):\n",
+    "    batch = {k: v.to(torch.device(\"cuda:0\")) for k, v in batch.items()}\n",
+    "    ret = model(batch)\n",
+    "    #break"
    ]
   },
   {
@@ -1012,8 +980,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "id": "d2ef5a82",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([40, 64])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([torch.randn(4,64) for i in range(10)],dim=0).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ef3a9f1a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([4, 640])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.cat([torch.randn(4,64) for i in range(10)],dim=1).shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc057b7a",
    "metadata": {},
    "outputs": [],
    "source": []
